# DobroKod-Further

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/src/: openai_service.py  session.py  utils.py
common_api/: Dockerfile
common_api/src/my_api/: main.py  models.py  openai_service.py  session.py  utils.py
common_api/src/processing/: openai_service.py
src/: bot.py  charity.py  config.py  openai_service.py  tickets.py
src/bot/: buttons_data.json  main.py  tickets.py
src/database/: example.db  initialization.py  models.py  session.py  utils.py
src/handlers/: faq_handler.py  questionnaire.py  recommendation.py
src/processing/: openai_service.py
src/prompts/: basic_prompt.txt  faq_prompt.txt  get_prompt.py
src/services/: crm_service.py  openai_service.py
src/web/: __init__.py  app.py  data_loader.py  style_display.py
telegram_bot/: Dockerfile
telegram_bot/src/: main.py
telegram_bot/src/bot/: main.py  tickets.py
web_app/: Dockerfile
web_app/src/web/: app.py  data_loader.py  style_display.py
